<resources>
    <string name="app_name">GetWave</string>
    <string name="Home">Home</string>
    <string name="Find">Find</string>
    <string name="Library">Your Library</string>
    <string name="BackButton">Back button</string>
    <string name="PlayButton">Play button</string>
    <string name="NextButton">Next song button</string>
    <string name="PrevButton">Previous song button</string>
    <string name="SongName">Song name</string>
    <string name="SongAuthor">Song author</string>
    <string name="SongArt">Song art</string>
    <string name="UndefinedTitle">Undefined title</string>
    <string name="UndefinedAuthor">Undefined author</string>
    <string name="MusicFromServer">Music from server</string>
    <string name="YourLibrary">Your library</string>

    <string name="GoodMorning">Good morning</string>
    <string name="GoodDay">Good day</string>
    <string name="GoodEvening">Good evening</string>
    <string name="GoodNight">Good night</string>

    <string name="LikedTracks">Your Liked Tracks</string>
</resources>