<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111a23"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/EnterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="#efefef"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        app:layout_constraintBottom_toTopOf="@+id/SongMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterText">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SongMenu"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="4dp"
        android:background="#151515"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/LowerMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/SongBarMenu"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="67dp"
            android:progressBackgroundTintMode="src_in"
            android:progressDrawable="@drawable/greenprogress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ImageMenu"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/SongArt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/musicicon" />

        <TextView
            android:id="@+id/TitleMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/SongName"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ImageMenu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AuthorMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:text="TextView"
            android:textColor="#dfdfdf"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/ImageMenu"
            app:layout_constraintTop_toBottomOf="@+id/TitleMenu" />

        <Button
            android:id="@+id/PlayMenu"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/ic_media_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LowerMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#151515"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/HomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/Home"
            android:textColor="#888888"
            app:layout_constraintEnd_toStartOf="@+id/FindText"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/HomeButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/homeunclicked"
            app:layout_constraintEnd_toStartOf="@+id/FindButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/FindText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/Find"
            android:textColor="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/FindButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/findunclicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LibText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/Library"
            android:textColor="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/FindText"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/LibButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/libunclicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/FindButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>