<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111a23"
    tools:context=".SongActivity">

    <SeekBar
        android:id="@+id/SongBar"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SongArt" />

    <Button
        android:id="@+id/PlayButton"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_media_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SongBar" />

    <Button
        android:id="@+id/PrevButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/ic_media_previous"
        app:layout_constraintEnd_toStartOf="@+id/PlayButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SongBar" />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/ic_media_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/PlayButton"
        app:layout_constraintTop_toBottomOf="@+id/SongBar" />

    <TextView
        android:id="@+id/SongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/SongName"
        android:textColor="#d3d3d3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SongArt" />

    <TextView
        android:id="@+id/SongAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/SongAuthor"
        android:textColor="#b0b0b0"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SongArt" />

    <ImageView
        android:id="@+id/SongArt"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/SongArt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/musicicon" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/abc_vector_test"
        android:rotation="-90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>